--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <meta name="theme-color" content="#000000" />
-
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="pch-icon.png">
  
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
@@ -13,15 +13,8 @@
     <title>React App</title>
   </head>
   <body>
-    <script type="text/javascript">
-      VK.init(function() {
-         console.log("success")
-      }, function() {
-        console.log("bad")
-    }, '5.103');
-    </script>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
 
 
   </body>
